Fixed images viewer buttons being hidden behind images

--- a/wcfsetup/install/files/style/ui/imageViewer.scss
+++ b/wcfsetup/install/files/style/ui/imageViewer.scss
@@ -88,6 +88,13 @@ $wcfImageViewerFontColor: rgba(211, 211, 211, 1);
 						opacity: 1;
 					}
 					
+					&.wcfImageViewerSlideshowButtonFull,
+					&.wcfImageViewerSlideshowButtonNext,
+					&.wcfImageViewerSlideshowButtonPrevious {
+						/* places buttons above images at all times */
+						z-index: 30;
+					}
+					
 					&.wcfImageViewerSlideshowButtonPrevious {
 						left: 10px;
 						
